--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "directories": {
     "test": "test"
   },
+  "files": [
+    "index.js",
+    "build",
+    "LICENSE"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
