--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   "files": [
     "index.js",
     "build",
+    "types",
     "LICENSE"
   ],
+  "types": "types/AccessControl.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf ./build",
+    "build": "npm run clean && mkdirp ./build && tsc",
+    "test": "npm run build && node test",
+    "docs": "tsc && docma -c ./docma.config.json"
   },
   "repository": {
     "type": "git",
@@ -26,6 +31,7 @@
     "grant",
     "deny",
     "allow",
+    "reject",
     "permission",
     "action",
     "possession",
@@ -48,16 +54,14 @@
   },
   "homepage": "https://github.com/onury/accesscontrol#readme",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.14.0",
-    "eslint": "^3.5.0",
-    "eslint-config-xo": "^0.15.4",
-    "grunt": "^1.0.1",
-    "grunt-babel": "^6.0.0",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-docma": "^0.6.4",
-    "grunt-jasmine-nodejs": "^1.5.4",
-    "matchdep": "^1.0.1"
+    "@types/node": "^7.0.5",
+    "docma": "^1.4.7",
+    "jasmine": "^2.5.3",
+    "jasmine-console-reporter": "^1.2.7",
+    "mkdirp": "^0.5.1",
+    "ncp": "^2.0.0",
+    "rimraf": "^2.6.1",
+    "typescript": "^2.2.1"
   },
   "dependencies": {
     "notation": "^1.0.0"
