update docma config

--- a/docma.config.json
+++ b/docma.config.json
@@ -92,8 +92,8 @@
     "src": [
         {
             "ac": [
-                "./build/**/*.js",
-                "!./build/lib/helper.js"
+                "./lib/**/*.js",
+                "!./lib/utils.js"
             ]
         },
         // "./CHANGELOG.md",
