--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,13 @@
         "declarationDir": "./lib",
         "target": "es5",
         "module": "commonjs",
+        "moduleResolution": "node",
         "removeComments": false,
         "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "lib": ["es6", "es2015", "dom"],
-        "sourceMap": true,
+        "sourceMap": false,
         "pretty": true,
         "allowUnreachableCode": false,
         "allowUnusedLabels": false,
