--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,10 @@ node_js:
   - '6'
   - '4'
 before_script: cd $TRAVIS_BUILD_DIR
+notifications:
+  email:
+    # recipients:
+    #   - one@example.com
+    on_success: never # default: change
+    on_failure: always # default: always
 
