--- a/package.json
+++ b/package.json
@@ -14,10 +14,32 @@
   ],
   "types": "./lib/index.d.ts",
   "scripts": {
+    "vuls": "snyk test",
+    "deps": "yarn upgrade-interactive && snyk test",
     "clean": "rimraf ./lib",
-    "build": "npm run clean && mkdirp ./lib && tsc",
-    "test": "npm run build && node test",
+    "build": "yarn run clean && mkdirp ./lib && tsc",
+    "test": "yarn run build && jest",
+    "coverage": "yarn run build && jest --coverage",
+    "coveralls": "cat ./test/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js -v",
     "docs": "docma -c ./docma.config.json"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/lib",
+      "<rootDir>/test"
+    ],
+    "testMatch": [
+      "**/test/(*.)?(spec|test).js"
+    ],
+    "testPathIgnorePatterns": [
+      "/backup/",
+      "/coverage/"
+    ],
+    "collectCoverageFrom": [
+      "lib/**/*.js"
+    ],
+    "coverageDirectory": "./test/coverage"
   },
   "repository": {
     "type": "git",
@@ -55,12 +77,13 @@
   "homepage": "https://github.com/onury/accesscontrol#readme",
   "devDependencies": {
     "@types/node": "^8.0.32",
+    "coveralls": "^3.0.0",
     "docma": "^1.5.1",
-    "jasmine": "^2.8.0",
-    "jasmine-console-reporter": "^2.0.1",
+    "jest-cli": "^21.2.1",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.2",
+    "snyk": "^1.49.4",
     "typescript": "^2.5.3"
   },
   "dependencies": {
