update npm scripts

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "deps": "yarn upgrade-interactive && snyk test",
     "clean": "rimraf ./lib",
     "build": "yarn run clean && mkdirp ./lib && tsc",
-    "test": "yarn run build && jest --verbose",
-    "test!": "yarn jest --verbose",
-    "coverage": "yarn run build && jest --coverage --verbose",
-    "coverage!": "yarn jest --coverage --verbose",
+    "test": "yarn run build && jest --verbose --no-cache",
+    "test!": "yarn jest --verbose --no-cache",
+    "cover": "yarn run build && jest --coverage --verbose --no-cache",
+    "cover!": "yarn jest --coverage --verbose --no-cache",
     "coveralls": "cat ./test/.coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js -v",
     "report": "open ./test/.coverage/lcov-report/index.html",
     "docs": "docma -c ./docma.config.json"
