clean up [skip ci]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,6 @@
         "./docs",
         "./test",
         "./tasks",
-        "./backup",
-        "./gruntfile.js"
+        "./backup"
     ]
 }
