--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "types": "./lib/index.d.ts",
   "scripts": {
     "vuls": "snyk test",
-    "deps": "yarn upgrade-interactive && snyk test",
+    "deps": "npm-check -u && snyk test",
     "clean": "rimraf ./lib",
-    "build": "yarn run clean && mkdirp ./lib && tsc",
-    "test": "yarn run build && jest --verbose --no-cache",
-    "test!": "yarn jest --verbose --no-cache",
-    "cover": "yarn run build && jest --coverage --verbose --no-cache",
-    "cover!": "yarn jest --coverage --verbose --no-cache",
+    "build": "npm run clean && mkdirp ./lib && tsc",
+    "test": "npm run build && jest --verbose --no-cache",
+    "test!": "jest --verbose --no-cache",
+    "cover": "npm run build && jest --coverage --verbose --no-cache",
+    "cover!": "jest --coverage --verbose --no-cache",
     "coveralls": "cat ./test/.coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js -v",
     "report": "open ./test/.coverage/lcov-report/index.html",
     "docs": "docma -c ./docma.config.json"
@@ -55,8 +55,7 @@
       "!**/IAccessInfo.ts",
       "!**/IQueryInfo.ts"
     ],
-    "coverageDirectory": "./test/.coverage",
-    "mapCoverage": true
+    "coverageDirectory": "./test/.coverage"
   },
   "repository": {
     "type": "git",
@@ -99,19 +98,19 @@
   },
   "homepage": "https://github.com/onury/accesscontrol#readme",
   "devDependencies": {
-    "@types/jest": "^21.1.6",
-    "@types/node": "^8.0.32",
+    "@types/jest": "^22.1.3",
+    "@types/node": "^9.4.6",
     "coveralls": "^3.0.0",
-    "docma": "^1.5.1",
-    "jest-cli": "^21.2.1",
+    "docma": "^1.5.3",
+    "jest-cli": "^22.4.2",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "rimraf": "^2.6.2",
-    "snyk": "^1.49.4",
-    "ts-jest": "^21.2.3",
-    "typescript": "^2.5.3"
+    "snyk": "^1.69.9",
+    "ts-jest": "^22.0.4",
+    "typescript": "^2.7.2"
   },
   "dependencies": {
-    "notation": "^1.3.5"
+    "notation": "^1.3.6"
   }
 }
