update travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ node_js:
   - '4'
 before_script: cd $TRAVIS_BUILD_DIR
 script:
-  - yarn run cover
-  - yarn run coveralls
+  - npm run cover
+  - npm run coveralls
 notifications:
   email:
     # recipients:
