--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cover!": "jest --coverage --verbose --no-cache",
     "coveralls": "cat ./test/.coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js -v",
     "report": "open ./test/.coverage/lcov-report/index.html",
-    "docs": "docma -c ./docma.config.json"
+    "docs": "docma -c ./docma.config.json",
+    "format": "prettier --write \"**/*.{js,ts,json,yaml,yml,md}\""
   },
   "jest": {
     "testEnvironment": "node",
@@ -105,6 +106,7 @@
     "jest-cli": "^22.4.2",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
+    "prettier": "^2.0.2",
     "rimraf": "^2.6.3",
     "snyk": "^1.122.0",
     "ts-jest": "^22.0.4",
