--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "deps": "npm-check -u && snyk test",
     "clean": "rimraf ./lib",
     "build": "npm run clean && mkdirp ./lib && tsc",
+    "watch": "npm run build -- -w",
     "test": "npm run build && jest --verbose --no-cache",
     "test!": "jest --verbose --no-cache",
     "cover": "npm run build && jest --coverage --verbose --no-cache",
@@ -108,7 +109,7 @@
     "rimraf": "^2.6.3",
     "snyk": "^1.122.0",
     "ts-jest": "^22.0.4",
-    "typescript": "^2.7.2"
+    "typescript": "4.1.2"
   },
   "dependencies": {
     "notation": "^1.3.6"
